# reeleezee-exporter

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-web.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
docker/: Dockerfile  docker-compose.yml
docs/: api-endpoints.md  architecture.md  setup.md
src/reeleezee_exporter/: __init__.py  client.py  download_files.py  explore_api.py  export_data.py  generate_viewer.py
tests/: test_client.py  test_export_data.py  test_web.py
viewers/: viewer.html  viewer_advanced.html
web/: app.py  auth.py  config.py  database.py  schemas.py
web/routes/: admin_routes.py  auth_routes.py  data_routes.py  download_routes.py  job_routes.py
web/static/: app.js  index.html  style.css
web/workers/: download_job.py  export_job.py
